Fix border overlapping issue

--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -11,8 +11,7 @@ nav > ul {
 nav > ul > li {
   width: 100%;
   
-  border: 1px solid black;
-  margin-right: -1px;
+  outline: 1px solid black;
   
   text-align: center;
   
@@ -26,14 +25,18 @@ nav > ul > li {
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  margin-left: 1px;
+  margin-top: 1px;
 }
 
 nav > ul > li:last-child {
-  margin-right: 0;
+  margin-right: 1px;
 }
 
 nav > ul > li:hover {
   background-color: rgb(190, 188, 188);
+  outline: 1px solid black;
 }
 
 nav a {
